--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /rpmfusion-free-25.xml.gz
 /rpmfusion-free-26-icons.tar.gz
 /rpmfusion-free-26.xml.gz
+/rpmfusion-free-28-icons.tar.gz
+/rpmfusion-free-28.xml.gz
+tags
