--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ tags
 /rpmfusion-free-29.xml.gz
 /rpmfusion-free-30-icons.tar.gz
 /rpmfusion-free-30.xml.gz
+/rpmfusion-free-32-icons.tar.gz
+/rpmfusion-free-32.xml.gz
