Initial el build

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-/rpmfusion-free-25-icons.tar.gz
-/rpmfusion-free-25.xml.gz
-/rpmfusion-free-26-icons.tar.gz
-/rpmfusion-free-26.xml.gz
-/rpmfusion-free-28-icons.tar.gz
-/rpmfusion-free-28.xml.gz
-tags
-/rpmfusion-free-29-icons.tar.gz
-/rpmfusion-free-29.xml.gz
-/rpmfusion-free-30-icons.tar.gz
-/rpmfusion-free-30.xml.gz
+/rpmfusion-free-*-icons.tar.gz
+/rpmfusion-free-*.xml.gz
+
