Update for rawhide

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ tags
 /rpmfusion-free-30.xml.gz
 /rpmfusion-free-32-icons.tar.gz
 /rpmfusion-free-32.xml.gz
+/rpmfusion-free-33-icons.tar.gz
+/rpmfusion-free-33.xml.gz
