Update for rawhide

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ tags
 /rpmfusion-free-32.xml.gz
 /rpmfusion-free-33-icons.tar.gz
 /rpmfusion-free-33.xml.gz
+/rpmfusion-free-34-icons.tar.gz
+/rpmfusion-free-34.xml.gz
