feat: regenerate for f36

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ tags
 /rpmfusion-free-33.xml.gz
 /rpmfusion-free-34-icons.tar.gz
 /rpmfusion-free-34.xml.gz
+/rpmfusion-free-36-icons.tar.gz
+/rpmfusion-free-36.xml.gz
