--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ tags
 /rpmfusion-free-33.xml.gz
 /rpmfusion-free-34-icons.tar.gz
 /rpmfusion-free-34.xml.gz
+/rpmfusion-free-35-icons.tar.gz
+/rpmfusion-free-35.xml.gz
