feat: update for f37

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ tags
 /rpmfusion-free-34.xml.gz
 /rpmfusion-free-36-icons.tar.gz
 /rpmfusion-free-36.xml.gz
+/rpmfusion-free-37-icons.tar.gz
+/rpmfusion-free-37.xml.gz
