chore: regenerate, move to new loc

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ tags
 /rpmfusion-free-39.xml.gz
 /rpmfusion-free-40-icons.tar.gz
 /rpmfusion-free-40.xml.gz
+/rpmfusion-free-41-icons.tar.gz
+/rpmfusion-free-41.xml.gz
